Permitir multiples origenes CORS en el backend
El backend solo aceptaba peticiones desde localhost:4200, lo que
bloqueaba las llamadas del frontend desplegado en AWS Amplify con un
403 "Invalid CORS request" pese a que API Gateway ya autorizaba el
origen correctamente.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>